--- a/src/main/resources/templates/th/fragments/header.html
+++ b/src/main/resources/templates/th/fragments/header.html
@@ -5,7 +5,7 @@
 <div th:fragment="headerFragment">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-12 xs-12">
+            <div class="col-md-12 xs-12 md-auto">
                 <nav class="navbar navbar-icon-top navbar-expand-lg navbar-light" style="background-color: white;">
                     <a class="navbar-brand" th:href="@{/}"><img th:src="@{/icon/thehouse.jpg}" class="rounded-circle" width=50px
                                                           height=50px /> <b> TheHouse</b></a>
@@ -16,7 +16,7 @@
                     </button>
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav mr-auto">
+                        <ul class="navbar-nav ml-auto">
 
                             <li class="nav-item dropdown">
                                 <a class="nav-link" th:href="@{/communityMain}" id="navbarDropdown" role="button" aria-haspopup="true"
@@ -45,23 +45,23 @@
                             </li>
 
 
-                            <div sec:authorize="hasRole('ROLE_SELLER')">
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link" th:href="@{/seller/main}" id="navbarDropdown" role="button" aria-haspopup="true"
-                                       aria-expanded="false">
+<!--                            <div sec:authorize="hasRole('ROLE_SELLER')">-->
+<!--                                <li class="nav-item dropdown">-->
+<!--                                    <a class="nav-link" th:href="@{/seller/sellerInfo}" id="navbarDropdown" role="button" aria-haspopup="true"-->
+<!--                                       aria-expanded="false">-->
 
-                                        업체관리
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" th:href="@{/seller/category}">업체관리</a>
-                                        <a class="dropdown-item" th:href="@{/}">상품관리</a>
-                                        <a class="dropdown-item" th:href="@{/}">주문관리</a>
-                                        <a class="dropdown-item" th:href="@{/}">통계관리</a>
-                                    </div>
+<!--                                        업체관리-->
+<!--                                    </a>-->
+<!--                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
+<!--                                        <a class="dropdown-item" th:href="@{/seller/sellerInfo}">업체관리</a>-->
+<!--                                        <a class="dropdown-item" th:href="@{/}">상품관리</a>-->
+<!--                                        <a class="dropdown-item" th:href="@{/}">주문관리</a>-->
+<!--                                        <a class="dropdown-item" th:href="@{/}">통계관리</a>-->
+<!--                                    </div>-->
 
 
-                                </li>
-                            </div>
+<!--                                </li>-->
+<!--                            </div>-->
 
 
                             <div sec:authorize="!hasAnyRole('ROLE_ADMIN', 'ROLE_SELLER')">
@@ -123,10 +123,10 @@
                             <form class="form-inline my-2 my-lg-0" th:action="@{/admin/statAdmin}">
                                 <button sec:authorize="hasRole('ROLE_ADMIN')" class="btn btn-outline-danger my-2 my-sm-0 btn-sm">관리자홈</button>
                             </form>
-                            <form class="form-inline my-2 my-lg-0" th:action="@{/seller}">
+                            <form class="form-inline my-2 my-lg-0" th:action="@{/seller/sellerInfo}">
                                 <button sec:authorize="hasRole('ROLE_SELLER')" class="btn btn-outline-danger my-2 my-sm-0 btn-sm">업체홈</button>
                             </form>
-
+                        </ul>
 
                     </div>
                 </nav>
