--- a/src/main/resources/templates/th/fragments/sellerHeader.html
+++ b/src/main/resources/templates/th/fragments/sellerHeader.html
@@ -20,23 +20,22 @@
 
                             <li class="nav-item dropdown">
                                 <a class="nav-link" th:href="@{/admin/statAdmin}" id="navbarDropdown" role="button" aria-haspopup="true"
-                                   aria-expanded="false">회원관리
+                                   aria-expanded="false">업체관리
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" th:href="@{/admin/}">회원소비패턴</a>
-                                    <a class="dropdown-item" th:href="@{/admin/}">회원정보</a>
-                                    <a class="dropdown-item" th:href="@{/admin/}">회원주문내역</a>
-                                    <a class="dropdown-item" th:href="@{/admin/chatList}">채팅</a>
-                                    <a class="dropdown-item" th:href="@{/admin/training}">추천트레이닝</a>
+                                    <a class="dropdown-item" th:href="@{/}">업체관리</a>
+                                    <a class="dropdown-item" th:href="@{/}">상품관리</a>
+                                    <a class="dropdown-item" th:href="@{/}">주문관리</a>
+                                    <a class="dropdown-item" th:href="@{/}">통계관리</a>
                                 </div>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link" th:href="@{/admin/}" id="navbarDropdown" role="button" aria-haspopup="true"
-                                   aria-expanded="false">제품관리
+                                <a class="nav-link" th:href="@{/}" id="navbarDropdown" role="button" aria-haspopup="true"
+                                   aria-expanded="false">상품관리
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" th:href="@{/admin/}">제품등록내역</a>
-                                    <a class="dropdown-item" th:href="@{/admin/}">제품판매관리</a>
+                                    <a class="dropdown-item" th:href="@{/}">상품등록</a>
+                                    <a class="dropdown-item" th:href="@{/}">상품리스트</a>
                                 </div>
 
 
@@ -44,23 +43,35 @@
 
                             <li class="nav-item dropdown">
                                 <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true"
-                                   aria-expanded="false">업체관리
+                                   aria-expanded="false">주문관리
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" th:href="@{/admin/}">거래처현황</a>
-                                    <a class="dropdown-item" th:href="@{/admin/}">업체신청 승인</a>
+                                    <a class="dropdown-item" th:href="@{/}">주문조회</a>
+                                    <a class="dropdown-item" th:href="@{/}">주문취소</a>
+                                    <a class="dropdown-item" th:href="@{/}">주문환불</a>
+                                </div>
+                            </li>
+
+                            <li class="nav-item dropdown">
+                                <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true"
+                                   aria-expanded="false">통계관리
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" th:href="@{/}">전체통계</a>
+                                    <a class="dropdown-item" th:href="@{/}">월별통계</a>
+                                    <a class="dropdown-item" th:href="@{/}">일별통계</a>
                                 </div>
                             </li>
                         </ul>
 
                         <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" th:href="@{/basket}">
-                                    <span class="asdf" style="font-size: 16px; color: black;">
-                                        <i class="fas fa-shopping-cart"> 장바구니</i>
-                                    </span>
-                                </a>
-                            </li>
+<!--                            <li class="nav-item">-->
+<!--                                <a class="nav-link" th:href="@{/basket}">-->
+<!--                                    <span class="asdf" style="font-size: 16px; color: black;">-->
+<!--                                        <i class="fas fa-shopping-cart"> 장바구니</i>-->
+<!--                                    </span>-->
+<!--                                </a>-->
+<!--                            </li>-->
 
                             <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/customLogout}">
                                 <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">로그아웃</button>
