--- a/src/main/resources/templates/th/layout/SellerLayout.html
+++ b/src/main/resources/templates/th/layout/SellerLayout.html
@@ -31,7 +31,7 @@
     <body>
         <div class="layout">
 
-            <th:block th:replace="th/fragments/header :: headerFragment"></th:block>
+            <th:block th:replace="th/fragments/sellerHeader :: headerFragment"></th:block>
 
             <div class="container">
                 <div class="row justify-content-center">
